--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "glob": "^7.1.1",
-    "loader-utils": "^0.2.10",
+    "is-url": "^1.2.2",
+    "loader-utils": "^1.0.2",
     "webfonts-generator": "^0.4.0"
   },
   "devDependencies": {
